fix:修改导航系统

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
   }
   .home-list-item {
     color: #333;
+    text-align: center;
+    min-width: 100px;
+    margin-right: 30px;
   }
 </style>
 <body>
@@ -46,6 +49,18 @@
           <img src="./assets/js.png" alt="">
         </div>
         <div class="home-item-name">运算系统</div>
+      </a>
+      <a class="home-list-item" href="/blog">
+        <div class="home-item-img">
+          <img src="./assets/blog.png" alt="">
+        </div>
+        <div class="home-item-name">博客</div>
+      </a>
+      <a class="home-list-item" href="https://www.github.com/nwjf">
+        <div class="home-item-img">
+          <img src="./assets/github.png" alt="">
+        </div>
+        <div class="home-item-name">github</div>
       </a>
     </div>
   </div>
