--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     max-width: 1200px;
     min-height: calc(100vh - 48px);
     background: #fff;
+    background: #f8f8f8;
     margin: auto;
     border-radius: 8px;
     padding: 24px;
@@ -31,6 +32,7 @@
     margin-bottom: 40px;
   }
   .home-list {
+    width: 100%;
     display: flex;
   }
   .home-list-item {
@@ -38,6 +40,43 @@
     text-align: center;
     min-width: 100px;
     margin-right: 30px;
+    background: #fff;
+    padding: 20px 30px;
+    border-radius: 8px;
+    transition: all .2s ease;
+    flex: none;
+    flex-wrap: wrap;
+  }
+  .home-list-item:last-child {
+    margin-right: 0;
+  }
+  .home-list-item:hover {
+    transform: scale(1.2);
+  }
+  .home-item-img {
+    width: 100%;
+    margin: auto;
+    padding: 10px;
+  }
+  .home-item-img img {
+    width: 100%;
+  }
+  @media screen and (max-width: 600px) {
+    .home-warp {
+      /* min-height: calc(100vh - 24px); */
+      padding: 12px;
+    }
+    .home-title {
+      font-size: 30px;
+    }
+    .home-list-item {
+      width: calc((100% - 30px - 48px) / 3);
+      margin-right: 5px;
+      padding: 10px 10px;
+    }
+    .home-list-item:nth-child(3n) {
+      margin-right: 0;
+    }
   }
 </style>
 <body>
