--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       font-size: 30px;
     }
     .home-list-item {
-      width: calc((100% - 30px - 48px) / 3);
+      width: calc((100% - 10px) / 3);
       margin-right: 5px;
       padding: 10px 10px;
     }
