--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>导航系统</title>
 </head>
+<link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
 <style>
   * { padding: 0; margin: 0; box-sizing: border-box; }
   body {
@@ -34,11 +35,13 @@
   .home-list {
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
   }
   .home-list-item {
     color: #333;
     text-align: center;
-    min-width: 100px;
+    /* min-width: 100px; */
+    width: 130px;
     margin-right: 30px;
     background: #fff;
     padding: 20px 30px;
@@ -46,6 +49,7 @@
     transition: all .2s ease;
     flex: none;
     flex-wrap: wrap;
+    margin-bottom: 10px;
   }
   .home-list-item:last-child {
     margin-right: 0;
@@ -77,6 +81,9 @@
     .home-list-item:nth-child(3n) {
       margin-right: 0;
     }
+    .home-list-item:hover {
+      transform: none;
+    }
   }
 </style>
 <body>
@@ -101,7 +108,37 @@
         </div>
         <div class="home-item-name">github</div>
       </a>
+
+      <div class="home-list-item" href="https://www.github.com/nwjf" data-bs-toggle="modal" data-bs-target="#xywyModal">
+        <div class="home-item-img">
+          <img src="./assets/xywy.png" alt="">
+        </div>
+        <div class="home-item-name">寻医问院</div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="xywyModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">寻医问院 微信小程序</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <h2 style="text-align: center;">微信识别</h2>
+          <img style="display: block; margin: auto;" src="./assets/xywy-qrcode.jpg" alt="">
+          <div>
+            罗列北京市医保定点医院，方便快速查找定点医院
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </body>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+
+</script>
 </html>
