--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2246281892161399"
     crossorigin="anonymous"></script>
 </head>
-<link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+
 <style>
   * { padding: 0; margin: 0; box-sizing: border-box; }
   body {
@@ -117,6 +117,20 @@
         </div>
         <div class="home-item-name">寻医问院</div>
       </div>
+
+      <a class="home-list-item" href="/adminX">
+        <div class="home-item-img">
+          <img src="./assets/adminx.png" alt="">
+        </div>
+        <div class="home-item-name">adminX DEMO</div>
+      </a>
+
+      <a class="home-list-item" href="https://github.com/nwjf/adminX">
+        <div class="home-item-img">
+          <img src="./assets/adminx.png" alt="">
+        </div>
+        <div class="home-item-name">adminX 文档</div>
+      </a>
     </div>
   </div>
 
@@ -139,6 +153,7 @@
   </div>
 </body>
 
+<link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <script>
 
