--- a/index.html
+++ b/index.html
@@ -75,6 +75,47 @@
       </el-input>
     `,
   });
+
+  const xiaomiFn = (formData, close) => {
+    axios({
+      url: 'https://api.kit9.cn/api/xiaomi_sports/api.php',
+      method: 'post',
+      headers: {
+        'content-type': 'application/x-www-form-urlencoded',
+      },
+      data: {
+        ...formData,
+      }
+    })
+      .then(res => {
+        close && close();
+        if (res.data.code === 200) {
+          ElementPlus.ElMessage.success('成功');
+        }
+        else {
+          ElementPlus.ElMessage.error(res.data.data || '失败');
+        }
+      })
+      .catch(() => {
+        close && close();
+      });
+  };
+  
+  const zepplifeFn = (formData, close) => {
+    axios.get(`https://apis.jxcxin.cn/api/mi?user=${formData.mobile}&password=${formData.password}&step=${formData.step}`)
+      .then(res => {
+        close && close();
+        if (res.data.code == 200) {
+          ElementPlus.ElMessage.success('成功');
+        }
+        else {
+          ElementPlus.ElMessage.error(res.data.data || '失败');
+        }
+      })
+      .catch(() => {
+        close && close();
+      })
+  }
   
   const StepNum = defineComponent({
     name: 'StepNum',
@@ -84,7 +125,7 @@
       'el-input': ElementPlus.ElInput,
       'el-button': ElementPlus.ElButton,
     },
-    setup() {
+    setup(props, { emit }) {
       const formData = reactive({
         mobile: '',
         password: '',
@@ -96,28 +137,13 @@
         step: { required: true, message: '请输入步数' },
       };
       const formRef = ref(null);
+      const loading = ref(false);
+
       const onSubmit = (formRef) => {
         formRef.validate(valid => {
           if (!valid) return false;
-          axios({
-            url: 'https://api.kit9.cn/api/xiaomi_sports/api.php',
-            method: 'post',
-            headers: {
-              'content-type': 'application/x-www-form-urlencoded',
-            },
-            data: {
-              ...formData,
-            }
-          })
-            .then(res => {
-              console.log('res', res);
-              if (res.data.code === 200) {
-                ElementPlus.ElMessage.success('成功');
-              }
-              else {
-                ElementPlus.ElMessage.error(res.data.data || '失败');
-              }
-            })
+          loading.value = true;
+          emit('submit', formData, () => { loading.value = false; });
         });
       };
       return {
@@ -125,25 +151,27 @@
         formData,
         rules,
         onSubmit,
+        loading,
       };
     },
     template: `
-      <el-form ref="formRef" label-width="110" :model="formData" :rules="rules">
-        <el-form-item label="小米运动账号" prop="mobile">
-          <el-input placeholder="请输入小米账号" style="width: 100%; max-width: 500px;" v-model="formData.mobile" />
+      <el-form ref="formRef" label-width="60" :model="formData" :rules="rules">
+        <el-form-item label="账号" prop="mobile">
+          <el-input placeholder="请输入账号" style="width: 100%; max-width: 500px;" v-model="formData.mobile" />
         </el-form-item>
-        <el-form-item label="小米运动密码" prop="password">
-          <el-input placeholder="请输入小米账号" style="width: 100%; max-width: 500px;" v-model="formData.password" />
+        <el-form-item label="密码" prop="password">
+          <el-input placeholder="请输入密码" style="width: 100%; max-width: 500px;" v-model="formData.password" />
         </el-form-item>
         <el-form-item label="步数" prop="step">
-          <el-input placeholder="请输入小米账号" style="width: 100%; max-width: 500px;" v-model="formData.step" />
+          <el-input placeholder="请输入步数" style="width: 100%; max-width: 500px;" v-model="formData.step" />
         </el-form-item>
         <el-form-item>
-          <el-button style="width: 100px;" @click="onSubmit(formRef)">刷步</el-button>
+          <el-button :loading="loading" style="width: 100px;" @click="onSubmit(formRef)">刷步</el-button>
         </el-form-item>
       </el-form>
     `,
   });
+  
   const xywy = () => {
     ElementPlus.ElMessageBox.alert(
       `
@@ -172,6 +200,8 @@
           { name: 'adminX DEMO', href: '/adminX', img: './assets/adminx.png' },
           { name: 'adminX 文档', href: 'https://github.com/nwjf/adminX', img: './assets/adminx.png' },
         ],
+        xiaomiFn,
+        zepplifeFn,
       }
     },
     template: `
@@ -194,8 +224,13 @@
           </div>
 
           <div class="box">
-            <div class="box-title">极速刷步</div>
-            <div class="box-warp"><StepNum /></div>
+            <div class="box-title">极速刷步(小米运动)</div>
+            <div class="box-warp"><StepNum @submit="xiaomiFn"/></div>
+          </div>
+
+          <div class="box">
+            <div class="box-title">极速刷步(zepp life app)</div>
+            <div class="box-warp"><StepNum @submit="zepplifeFn"/></div>
           </div>
         </div>
       </div>
