--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <script src="https://unpkg.com/element-plus"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script>
-  const { createApp, defineComponent, ref, reactive } = Vue
+  const { createApp, defineComponent, ref, reactive, onMounted } = Vue
   const Item = defineComponent({
     props: ['data'],
     setup(props) {
@@ -124,6 +124,10 @@
       'el-form-item': ElementPlus.ElFormItem,
       'el-input': ElementPlus.ElInput,
       'el-button': ElementPlus.ElButton,
+      'el-checkbox': ElementPlus.ElCheckbox,
+    },
+    props: {
+      type: String,
     },
     setup(props, { emit }) {
       const formData = reactive({
@@ -138,20 +142,40 @@
       };
       const formRef = ref(null);
       const loading = ref(false);
+      const isRemember = ref(false); // 是否记住密码
 
       const onSubmit = (formRef) => {
         formRef.validate(valid => {
           if (!valid) return false;
           loading.value = true;
-          emit('submit', formData, () => { loading.value = false; });
+          emit('submit', formData, () => {
+            loading.value = false;
+            if (isRemember.value) {
+              localStorage.setItem(props.type, JSON.stringify(formData));
+            }
+            else {
+              localStorage.removeItem(props.type);
+            }
+          });
         });
       };
+
+      onMounted(() => {
+        try {
+          let local = localStorage.getItem(props.type);
+          let temp = JSON.parse(local);
+          formData.mobile = temp.mobile;
+          formData.password = temp.password;
+          isRemember.value = true;
+        } catch (error) {}
+      });
       return {
         formRef,
         formData,
         rules,
         onSubmit,
         loading,
+        isRemember,
       };
     },
     template: `
@@ -160,13 +184,14 @@
           <el-input placeholder="请输入账号" style="width: 100%; max-width: 500px;" v-model="formData.mobile" />
         </el-form-item>
         <el-form-item label="密码" prop="password">
-          <el-input placeholder="请输入密码" style="width: 100%; max-width: 500px;" v-model="formData.password" />
+          <el-input placeholder="请输入密码" style="width: 100%; max-width: 500px;" v-model="formData.password" type="password" />
         </el-form-item>
         <el-form-item label="步数" prop="step">
           <el-input placeholder="请输入步数" style="width: 100%; max-width: 500px;" v-model="formData.step" />
         </el-form-item>
-        <el-form-item>
-          <el-button :loading="loading" style="width: 100px;" @click="onSubmit(formRef)">刷步</el-button>
+        <el-form-item label-width="20px">
+          <el-checkbox v-model="isRemember">记住密码</el-checkbox>
+          <el-button :loading="loading" style="width: 100px;margin-left: 30px;" @click="onSubmit(formRef)">刷步</el-button>
         </el-form-item>
       </el-form>
     `,
@@ -189,7 +214,13 @@
 
   
   createApp({
-    components: { StepNum, Search, Item },
+    components: {
+      StepNum,
+      Search,
+      Item,
+      'el-row': ElementPlus.ElRow,
+      'el-col': ElementPlus.ElCol,
+    },
     data() {
       return {
         projectList: [
@@ -223,15 +254,22 @@
             </div>
           </div>
 
-          <div class="box">
-            <div class="box-title">极速刷步(小米运动)</div>
-            <div class="box-warp"><StepNum @submit="xiaomiFn"/></div>
-          </div>
+          <el-row :gutter="24">
+            <el-col :xs="{ span: 24 }" :sm="{ span: 12}">
+              <div class="box">
+                <div class="box-title">极速刷步(小米运动)</div>
+                <div class="box-warp"><StepNum @submit="xiaomiFn" type="mi"/></div>
+              </div>
+            </el-col>
+            <el-col :xs="{ span: 24 }" :sm="{ span: 12}">
+              <div class="box">
+                <div class="box-title">极速刷步(zepp life app)</div>
+                <div class="box-warp"><StepNum @submit="zepplifeFn" type="zeppLife"/></div>
+              </div>
+            </el-col>
+          </el-row>
 
-          <div class="box">
-            <div class="box-title">极速刷步(zepp life app)</div>
-            <div class="box-warp"><StepNum @submit="zepplifeFn"/></div>
-          </div>
+
         </div>
       </div>
     `,
