fix:增加自动刷步提示语

--- a/index.html
+++ b/index.html
@@ -235,6 +235,21 @@
         zepplifeFn,
       }
     },
+    methods: {
+      onAuto() {
+        ElementPlus.ElMessageBox.alert(
+          `
+            <div style="font-size: 16px;">
+              <b>方案1:</b> &nbsp;&nbsp;提供定时刷固定步数方案，解放双手<br/><br/>
+              <b>方案2:</b> &nbsp;&nbsp;为您量身定制个性方案<br/><br/>
+              <b>tips:</b> &nbsp;&nbsp;可免费订阅邮件服务
+            </div>
+          `,
+          '解放双手',
+          { dangerouslyUseHTMLString: true },
+        );
+      },
+    },
     template: `
       <div class="home-warp">
         
@@ -257,13 +272,19 @@
           <el-row :gutter="24">
             <el-col :xs="{ span: 24 }" :sm="{ span: 12}">
               <div class="box">
-                <div class="box-title">极速刷步(小米运动)</div>
+                <div class="box-title">
+                  <span>极速刷步(小米运动)</span>
+                  <span @click="onAuto">点我自动刷</span>
+                </div>
                 <div class="box-warp"><StepNum @submit="xiaomiFn" type="mi"/></div>
               </div>
             </el-col>
             <el-col :xs="{ span: 24 }" :sm="{ span: 12}">
               <div class="box">
-                <div class="box-title">极速刷步(zepp life app)</div>
+                <div class="box-title">
+                  <span>极速刷步(zepp life app)</span>
+                  <span @click="onAuto">点我自动刷</span>
+                </div>
                 <div class="box-warp"><StepNum @submit="zepplifeFn" type="zeppLife"/></div>
               </div>
             </el-col>
