fix:增加备案号

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
-  <title>快速导航</title>
+  <title>我做主</title>
   <link rel="stylesheet" href="./index.css">
 </head>
 
@@ -258,7 +258,7 @@
           <img src="https://image-70559.picnjc.qpic.cn/albumpic/42ef97395601262f7adfba5353cc6cd0.jpeg" alt="">
         </div>
         <div class="home-content">
-          <div class="home-title">极速导航，从这里开始！</div>
+          <div class="home-title">我的世界，我做主！</div>
           <div class="home-msg">捐躯赴国难，视死忽如归。——曹植《白马篇》</div>
 
           <Search />
@@ -293,6 +293,7 @@
 
 
         </div>
+        <div class="footer">京ICP备2023021214号</div>
       </div>
     `,
   }).mount('#app');
